HAL CODE/.metadata/.plugins/org.eclipse.cdt.ui/alternate led_hal.build.log
20:14:54 **** Incremental Build of configuration Debug for project alternate led_hal ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:101:60: error: 'GPIO_PIN_RSET' undeclared (first use in this function); did you mean 'GPIO_PIN_SET'?
  101 |           HAL_GPIO_WritePin(GPIOD,GPIO_PIN_13 |GPIO_PIN_15,GPIO_PIN_RSET);
      |                                                            ^~~~~~~~~~~~~
      |                                                            GPIO_PIN_SET
../Core/Src/main.c:101:60: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

20:14:54 Build Failed. 2 errors, 0 warnings. (took 260ms)

